Fixed team leaders from taking up too much space

--- a/css/gameAnalysis.css
+++ b/css/gameAnalysis.css
@@ -91,7 +91,7 @@
 }
 
 .team-leaders .leader {
-	width: 30dvw;
+	width: 33%;
 
 	position: relative;
 
